# manim.salad

./: LICENSE  README.md
cogdia/: .gitignore  demo.py  pyproject.toml
cogdia/cogdia/: diagram.py  phy_renderer_manim.py  renderer.py
manim.tut/: .gitignore
manim.tut/tutorial1/: cmd.md
manim.venv/: .gitignore  readme.md
